--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,23 @@
 asgiref==3.9.1
+certifi==2025.7.14
+charset-normalizer==3.4.2
 click==8.2.1
 colorama==0.4.6
 cssbeautifier==1.15.4
 Django==5.2.4
 django-braces==1.17.0
+django-embed-video==1.4.10
 djlint==1.36.4
 EditorConfig==0.17.1
+idna==3.10
 jsbeautifier==1.15.4
 json5==0.12.0
 pathspec==0.12.1
 pillow==11.3.0
 PyYAML==6.0.2
 regex==2024.11.6
+requests==2.32.4
 six==1.17.0
 sqlparse==0.5.3
 tqdm==4.67.1
+urllib3==2.5.0
