feat: integrate Memcached with Django cache framework and configure multi-level caching with debug tools

--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ colorama==0.4.6
 cssbeautifier==1.15.4
 Django==5.2.4
 django-braces==1.17.0
+django-debug-toolbar==6.0.0
 django-embed-video==1.4.10
 djlint==1.36.4
 EditorConfig==0.17.1
@@ -14,6 +15,7 @@ jsbeautifier==1.15.4
 json5==0.12.0
 pathspec==0.12.1
 pillow==11.3.0
+pymemcache==4.0.0
 PyYAML==6.0.2
 regex==2024.11.6
 requests==2.32.4
