--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 asgiref==3.9.1
+attrs==25.3.0
 certifi==2025.7.14
 charset-normalizer==3.4.2
 click==8.2.1
@@ -8,6 +9,7 @@ Django==5.2.4
 django-braces==1.17.0
 django-debug-toolbar==6.0.0
 django-embed-video==1.4.10
+django-redisboard==9.0.0
 djlint==1.36.4
 EditorConfig==0.17.1
 idna==3.10
@@ -17,6 +19,7 @@ pathspec==0.12.1
 pillow==11.3.0
 pymemcache==4.0.0
 PyYAML==6.0.2
+redis==6.2.0
 regex==2024.11.6
 requests==2.32.4
 six==1.17.0
