--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ django-braces==1.17.0
 django-debug-toolbar==6.0.0
 django-embed-video==1.4.10
 django-redisboard==9.0.0
+djangorestframework==3.16.1
 djlint==1.36.4
 EditorConfig==0.17.1
 idna==3.10
