feat: integrate Django Channels with ASGI for real-time apps, adding consumers and routing

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,17 @@
 asgiref==3.9.1
 attrs==25.3.0
+autobahn==24.4.2
+Automat==25.4.16
 certifi==2025.7.14
+cffi==1.17.1
+channels==4.3.1
 charset-normalizer==3.4.2
 click==8.2.1
 colorama==0.4.6
+constantly==23.10.4
+cryptography==45.0.6
 cssbeautifier==1.15.4
+daphne==4.2.1
 Django==5.2.4
 django-braces==1.17.0
 django-debug-toolbar==6.0.0
@@ -13,17 +20,29 @@ django-redisboard==9.0.0
 djangorestframework==3.16.1
 djlint==1.36.4
 EditorConfig==0.17.1
+hyperlink==21.0.0
 idna==3.10
+incremental==24.7.2
 jsbeautifier==1.15.4
 json5==0.12.0
 pathspec==0.12.1
 pillow==11.3.0
+pyasn1==0.6.1
+pyasn1_modules==0.4.2
+pycparser==2.22
 pymemcache==4.0.0
+pyOpenSSL==25.1.0
 PyYAML==6.0.2
 redis==6.2.0
 regex==2024.11.6
 requests==2.32.4
+service-identity==24.2.0
+setuptools==80.9.0
 six==1.17.0
 sqlparse==0.5.3
 tqdm==4.67.1
+Twisted==25.5.0
+txaio==25.6.1
+typing_extensions==4.14.1
 urllib3==2.5.0
+zope.interface==7.2
