--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ Automat==25.4.16
 certifi==2025.7.14
 cffi==1.17.1
 channels==4.3.1
+channels_redis==4.3.0
 charset-normalizer==3.4.2
 click==8.2.1
 colorama==0.4.6
@@ -25,6 +26,7 @@ idna==3.10
 incremental==24.7.2
 jsbeautifier==1.15.4
 json5==0.12.0
+msgpack==1.1.1
 pathspec==0.12.1
 pillow==11.3.0
 pyasn1==0.6.1
