--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,13 +19,12 @@ services:
     build: .
     command:
       [
-        "/code/wait-for-it.sh",
+        "./wait-for-it.sh",
         "db:5432",
         "--",
-        "python",
-        "/code/manage.py",
-        "runserver",
-        "0.0.0.0:8000",
+        "uwsgi",
+        "--ini",
+        "/code/config/uwsgi/uwsgi.ini",
       ]
     restart: always
     volumes:
@@ -40,3 +39,12 @@ services:
     depends_on:
       - db
       - cache
+
+  nginx:
+    image: nginx:1.25.5
+    restart: always
+    volumes:
+      - ./config/nginx:/etc/nginx/templates
+      - .:/code
+    ports:
+      - "80:80"
