feat: secure site with SSL/TLS by configuring Django and NGINX with HTTPS redirection

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -47,4 +47,5 @@ services:
       - ./config/nginx:/etc/nginx/templates
       - .:/code
     ports:
-      - "80:80"
+      - "80:80" # http
+      - "443:443" # https
