--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -49,3 +49,29 @@ services:
     ports:
       - "80:80" # http
       - "443:443" # https
+
+  daphne:
+    build: .
+    working_dir: /code/
+    command: [
+        "./wait-for-it.sh",
+        "db:5432",
+        "--",
+        "daphne",
+        "-b", # bind
+        "0.0.0.0", # to all available network interfaces
+        "-p",
+        "9001",
+        "educa.asgi:application",
+      ]
+    restart: always
+    volumes:
+      - .:/code
+    environment:
+      - DJANGO_SETTINGS_MODULE=educa.settings.prod
+      - POSTGRES_DB=postgres
+      - POSTGRES_USER=postgres
+      - POSTGRES_PASSWORD=postgres
+    depends_on:
+      - db
+      - cache
